Add padding-bottom to all sections

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contacto">
+<section id="contacto" class="pb-5">
   <div class="container">
     <h1>CONTACTO</h1>
     <div class="row">
