--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,4 +1,4 @@
-<section id="nosotros">
+<section id="nosotros" class="pb-5">
   <div class="container">
     <h1>NOSOTROS</h1>
     <div class="container text-center">
