--- a/src/app/technicals-details/technicals-details.component.html
+++ b/src/app/technicals-details/technicals-details.component.html
@@ -1,4 +1,4 @@
-<section id="detalles-tecnicos">
+<section id="detalles-tecnicos" class="pb-5">
   <div class="container">
     <h1>DETALLES TÉCNICOS</h1>
     <div class="row">
