--- a/src/app/technicals-details/technologies/technologies.component.html
+++ b/src/app/technicals-details/technologies/technologies.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="pb-5">
     <div class="container">
       <h1 class="mb-4">TECNOLOGÍAS</h1>
       <div class="row text-center">
