--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -24,46 +24,19 @@
         ></button>
       </div>
       <div class="carousel-item active">
-        <video
-          src="assets/videos/cleaning_robot.mp4"
-          class="d-block"
-          alt="..."
-          autoplay
-          loop
-          muted
-        >
-          Tu navegador no admite el elemento <code>video</code>.
-        </video>
+        <img src="assets/images/banner/Map.jpg" style="object-fit: cover; width:100%; height: 50vh; object-position: 50% 50%;" />
         <div class="carousel-caption d-block">
           <h1>Ofrecemos servicios de navegación inteligentes</h1>
         </div>
       </div>
       <div class="carousel-item">
-        <video
-          src="assets/videos/keypoints.mp4"
-          class="d-block"
-          alt="..."
-          autoplay
-          loop
-          muted
-        >
-          Tu navegador no admite el elemento <code>video</code>.
-        </video>
+        <img src="assets/images/banner/Recording.jpg"style="object-fit: cover; width:100%; height: 50vh; object-position: 50% 50%;" />
         <div class="carousel-caption d-block">
           <h1>Generación de mapas, localización y navegación.</h1>
         </div>
       </div>
       <div class="carousel-item">
-        <video
-          src="assets/videos/warehouse.mp4"
-          class="d-block"
-          alt="..."
-          autoplay
-          loop
-          muted
-        >
-          Tu navegador no admite el elemento <code>video</code>.
-        </video>
+        <img src="assets/images/banner/Robot.jpg" style="object-fit: cover; width:100%; height: 50vh; object-position: 50% 50%;" />
         <div class="carousel-caption d-block">
           <h1>Aplicación en diversos dispositivos y robots.</h1>
         </div>
