Fix horizontal scroll on mobile

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="row pt-5">
       <div
-        data-aos="fade-left"
+        data-aos="fade-up"
         data-aos-duration="1000"
         data-aos-offset="500"
         class="col-xs-12 col-sm-12 col-md-4 col-lg-4 order-sm-1 order-xs-1 order-md-last order-lg-0 order-xl-0"
